--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,6 +14,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon-96x96.png">
     <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
+    
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eligrey-classlist-js-polyfill"></script>
+    <script src="https://cdn.jsdelivr.net/npm/findindex_polyfill_mdn"></script>
+    <script src="https://unpkg.com/canvg@3.0.4/lib/umd.js"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
