update icon index

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/eligrey-classlist-js-polyfill"></script>
     <script src="https://cdn.jsdelivr.net/npm/findindex_polyfill_mdn"></script>
     <script src="https://unpkg.com/canvg@3.0.4/lib/umd.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
